// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemUI renders predictably when complete 1`] = `
<li
  className="item flex-row"
>
  <ItemCheckboxUI
    className="flex-auto"
    isComplete={false}
    onChange={[Function]}
    uuid="asdfasdf"
  />
  <span
    className="item-description flex-grow flex-align-center"
  >
    one
  </span>
  <button
    className="clear-button monospaced-button flex-shrink flex-align-top"
    onClick={[Function]}
    onKeyPress={[Function]}
  >
    delete
  </button>
</li>
`;

exports[`ItemUI renders predictably when incomplete 1`] = `
<li
  className="item flex-row"
>
  <ItemCheckboxUI
    className="flex-auto"
    isComplete={true}
    onChange={[Function]}
    uuid="asdfasdf"
  />
  <span
    className="item-description-complete flex-grow flex-align-center"
  >
    one
  </span>
  <button
    className="clear-button monospaced-button flex-shrink flex-align-top"
    onClick={[Function]}
    onKeyPress={[Function]}
  >
    delete
  </button>
</li>
`;
